@@ -39,165 +39,139 @@ public class DocumentTagTable : TextTagTable {
 		Add (tag);
 		
 		tag = new TextTag ("Type:Name");
-		tag.Editable = false;
 		tag.Invisible = false;
 		Add (tag);
 		
 		tag = new TextTag ("Type:FullName");
 		tag.Scale = Pango.Scale.XXLarge;
 		tag.PixelsBelowLines = 10;
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("Type:FullNameSP");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("Type:Maintainer");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("TypeSignature");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("TypeSignature:Language");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("TypeSignature:Value");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("TypeSignature:Maintainer");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("AssemblyInfo");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("AssemblyName");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("AssemblyPublicKey");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("AssemblyVersion");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("ThreadSafetyStatement");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("Base");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("BaseTypeName");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("Attributes");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("Attribute");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("AttributeName");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("Members");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("Member");
-		tag.Editable = false;
+		Add (tag);
+		
+		tag = new TextTag ("Member:MemberName");
+		Add (tag);
+		
+		tag = new TextTag ("Member:Deprecated");
 		Add (tag);
 		
 		tag = new TextTag ("Member:Attributes");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("MemberSignature");
-		tag.Editable = false;
 		Add (tag);
 		
-		tag = new TextTag ("MemberSignature:Attributes");
-		tag.Editable = false;
+		tag = new TextTag ("MemberSignature:Language");
+		Add (tag);
+		
+		tag = new TextTag ("MemberSignature:Value");
 		Add (tag);
 		
 		tag = new TextTag ("MemberType");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("ReturnValue");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("ReturnType");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("Parameters");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("Docs");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("summary");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("remarks");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("para");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("see");
-		tag.Editable = false;
 		tag.Foreground = "red";
 		Add (tag);
 		
 		tag = new TextTag ("see:cref");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("see:langword");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("see:qualify");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("link");
-		tag.Editable = false;
 		tag.Underline = Pango.Underline.Single;
 		tag.Foreground = "#204a87";
 		Add (tag);
 		
 		tag = new TextTag ("link:location");
-		tag.Editable = false;
 		Add (tag);
 		
 		tag = new TextTag ("since");
-		tag.Editable = false;
+		Add (tag);
+		
+		tag = new TextTag ("since:version");
+		tag.Foreground = "orange";
 		Add (tag);
 		
 		tag = new TextTag ("ignore");
-		tag.Editable = false;
 		Add (tag);
 	}
 }
